# sample-actix-server

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.MD  skaffold.yaml
kubernetes/: deployment.yaml  deployment_tac.yaml  virtualservice.yaml
src/: main.rs
