[package]
name = "sample-actix-server"
version = "0.1.0"
authors = ["Julien SENON <julien.senon@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.7.9"
actix-web = "0.7.18"
serde_json = "1.0.38"
serde_derive = "1.0.86"
serde = "1.0.86"
bytes = "0.4.11"
futures = "0.1.25"
rustracing = "0.1.8"
rustracing_jaeger = "0.1.9"
lazy_static = "1.2.0"
log = "0.4.6"
reqwest = "0.9.9"
chrono = "0.4.6"